fix: frontend ui bug fixing